# SQLiteWrapper

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
SQLiteWrapper/: AutoincrementSet.h  AutoincrementStorage.h  AutoincrementTableInstantiator.h  Bind.h  Database.cpp  Database.h  Element.h  Exception.h  FieldListBuilder.h  Get.h  Helpers.h  HeterogeneousIterator.h  IndexFilter.h  IndexInstantiator.h  Iterator.h  MapStorage.h  NaturalStorage.h  QueryBuilder.h  Scalar.h  Scheme.h  Set.h  SetStorage.h  Statement.cpp  Statement.h  TableBuilder.h  TableInstantiator.h  TableVisitor.h  TransactionGuard.cpp  TransactionGuard.h  Types.h  Updater.h
Tests/: AutoincrementSetTest.cpp  BlobTest.cpp  DbContainer.cpp  DbContainer.h  ExchangeModel.h  FunctionTest.cpp  GetBindTest.cpp  IndexTest.cpp  InstantiatorTest.cpp  IteratorTest.cpp  MapStorageTest.cpp  MarketTest.cpp  ModelTypes.h  NestedKeyTest.cpp  NonCopyableTest.cpp  OracleSitTest.cpp  RowIdTest.cpp  SetStorageTest.cpp  SetTest.cpp  TableHelper.h  main.cpp
Tests/Experimental/: MapStorage.h
